added more styling

--- a/index.html
+++ b/index.html
@@ -4,48 +4,64 @@
     <meta charset="UTF-8" />
     <title>LED Face Mask</title>
     <link rel="stylesheet" href="styles.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&family=Urbanist:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+
+
+
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Bodoni+Moda:ital,opsz,wght@0,6..96,400..900;1,6..96,400..900&display=swap" rel="stylesheet">
   </head>
   <body>
 
+<div class="container">
 
-    <header>
-      <div class="logo">
-        <h3>header logo</h3>
-      </div>
+  <header>
+    <div class="logo">
+      <h3>Luma Skin</h3>
+    </div>
 
-      <div class="links">
-        <a href="">home</a>
-        <a href="">home</a>
-        <a href="">home</a>
-      </div>
+    <div class="links">
+      <a href="">home</a>
+      <a href="">home</a>
+      <a href="">home</a>
+    </div>
 
-    </header>
-
-
-    <div class="description">
-
-      <h1>LED Face Mask</h1>
+  </header>
 
 
-      <div class="des">
-        <p>LED face masks are skincare devices that use light-emitting diodes (LEDs) to deliver light therapy to the skin. These masks typically use various wavelengths of light, each of which targets different skin concerns</p>
-  
-  
-        <img class="led" src="../landing-page/images/ledmask.jpg">
+  <div class="description">
+
+    <h1 class="descriptionheader">LED Face Mask</h1>
 
 
-      </div>
+    <div class="descriptiontext">
+      <p>LED face masks are skincare devices that use light-emitting diodes (LEDs) to deliver light therapy to the skin. These masks typically use various wavelengths of light, each of which targets different skin concerns</p>
+
+
+      <img class="ledimage" src="../landing-page/images/ledmask1.jpg">
+
 
     </div>
 
+  </div>
+
+
+</div>
+
    
 
+<div class="information">
+
+<div class="informationheader">
+
+  <h2>Information on LED colors</h2>
+</div>
 
 
-    <h2>Information on LED colors</h2>
 
-
-    <div class="img">
 
       <div class="item">
         <img src="../landing-page/images/images-2.jpg" 
@@ -81,13 +97,24 @@
 
 
 
+ <div class="howitworks">
 
-    <h2>How it works</h2>
+   <h2>How it works</h2>
 
 
 
-    <p>Description on how it works</p>
+   <p>LED face masks use non-invasive light therapy to activate the skin’s natural healing processes, making them suitable for at-home use. They typically involve wearing the mask for 10-30 minutes, a few times a week, depending on the skin issue you're targeting.
 
-    <footer>Will figure out what to put here later</footer>
+     While results can vary based on skin type and concerns, many users report seeing improvements in their skin texture, clarity, and tone with consistent use. However, it's important to note that LED light therapy isn't a quick fix and works best when used alongside a good skincare routine</p>
+
+ </div>
+
+
+ <div class="bottom">
+
+<p>will figure out what to put here</p>
+ </div>
+
+    <footer class="footer">Will figure out what to put here later</footer>
   </body>
 </html>
