--- a/index.html
+++ b/index.html
@@ -4,116 +4,117 @@
     <meta charset="UTF-8" />
     <title>LED Face Mask</title>
     <link rel="stylesheet" href="styles.css" />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&family=Urbanist:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&family=Urbanist:ital,wght@0,100..900;1,100..900&display=swap"
+      rel="stylesheet"
+    />
 
-
-
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Bodoni+Moda:ital,opsz,wght@0,6..96,400..900;1,6..96,400..900&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Bodoni+Moda:ital,opsz,wght@0,6..96,400..900;1,6..96,400..900&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
+    <div class="container">
+      <header>
+        <p class="logo">Luma Skin</p>
 
-<div class="container">
+        <div class="links">
+          <a href="">header link one</a>
+          <a href="">header link two</a>
+          <a href="">header link three</a>
+        </div>
+      </header>
 
-  <header>
-    <div class="logo">
-      <h3>Luma Skin</h3>
-    </div>
-    
-    <div class="links">
-      <a href="">home</a>
-      <a href="">home</a>
-      <a href="">home</a>
-    </div>
-  </header>
+      <h1 class="descriptionheader">LED Face Mask</h1>
 
+      <div class="description">
+        <div class="descriptiontext">
+          <p>
+            LED face masks are skincare devices that use light-emitting diodes
+            (LEDs) to deliver light therapy to the skin. These masks typically
+            use various wavelengths of light, each of which targets different
+            skin concerns
+          </p>
 
-
-  <div class="description">
-
-    <h1 class="descriptionheader">LED Face Mask</h1>
-
-
-    <div class="descriptiontext">
-      <p>LED face masks are skincare devices that use light-emitting diodes (LEDs) to deliver light therapy to the skin. These masks typically use various wavelengths of light, each of which targets different skin concerns</p>
-
-
-      <img class="ledimage" src="../landing-page/images/ledmask1.jpg">
-
-
+          <img class="ledimage" src="../landing-page/images/ledmask1.jpg" />
+        </div>
+      </div>
     </div>
 
-  </div>
+    <div class="informationheader">
+      <h2>Information on LED colors</h2>
+    </div>
 
-
-</div>
-
-   
-<div class="informationheader">
-
-  <h2>Information on LED colors</h2>
-  
-  
-</div>
-
-<div class="information">
-
-
-
+    <div class="information">
       <div class="item">
-        <img src="../landing-page/images/images-2.jpg" 
-        class="resize" 
-        alt="red mask"
+        <img
+          src="../landing-page/images/images-2.jpg"
+          class="resize"
+          alt="red mask"
         />
-        <span class="caption">Anti-aging (Red Light) red light penetrates deep into the skin to stimulate collagen and elastin production, which are essential for skin elasticity and firmness. This can help reduce the appearance of fine lines, wrinkles, and sagging skin, promoting a more youthful appearance
+        <span class="caption"
+          >Anti-aging (Red Light) red light penetrates deep into the skin to
+          stimulate collagen and elastin production, which are essential for
+          skin elasticity and firmness. This can help reduce the appearance of
+          fine lines, wrinkles, and sagging skin, promoting a more youthful
+          appearance
         </span>
       </div>
-  
-
-
 
       <div class="item">
-        <img src="../landing-page/images/bluelight.jpeg"
-         class="resize" 
-         alt="blue mask" />
+        <img
+          src="../landing-page/images/bluelight.jpeg"
+          class="resize"
+          alt="blue mask"
+        />
         <span class="caption">
-          Acne Treatment (Blue Light) Blue light helps kill Propionibacterium acnes bacteria, which are responsible for causing acne. It also reduces oil production in the skin, which can help prevent future breakouts. Blue light therapy is often used to treat active acne
+          Acne Treatment (Blue Light) Blue light helps kill Propionibacterium
+          acnes bacteria, which are responsible for causing acne. It also
+          reduces oil production in the skin, which can help prevent future
+          breakouts. Blue light therapy is often used to treat active acne
         </span>
       </div>
 
-  
       <div class="item">
-        <img src="../landing-page/images/yellowlight.jpeg" 
-        class="resize" 
-        alt="yellow mask" />
-        <span class="caption">Reduced Inflammation (Yellow Light) Yellow light is good for improving circulation and reducing inflammation. It helps with skin rejuvenation, making the skin appear brighter and more radiant. It can also help reduce puffiness and promote skin healing </span>
+        <img
+          src="../landing-page/images/yellowlight.jpeg"
+          class="resize"
+          alt="yellow mask"
+        />
+        <span class="caption"
+          >Reduced Inflammation (Yellow Light) Yellow light is good for
+          improving circulation and reducing inflammation. It helps with skin
+          rejuvenation, making the skin appear brighter and more radiant. It can
+          also help reduce puffiness and promote skin healing
+        </span>
       </div>
-
-
     </div>
 
+    <div class="howitworks">
+      <h2 class="howitworksheader">How it works</h2>
 
+      <p class="howitworkstext">
+        LED face masks use non-invasive light therapy to activate the skin’s
+        natural healing processes, making them suitable for at-home use. They
+        typically involve wearing the mask for 10-30 minutes, a few times a
+        week, depending on the skin issue you're targeting. While results can
+        vary based on skin type and concerns, many users report seeing
+        improvements in their skin texture, clarity, and tone with consistent
+        use. However, it's important to note that LED light therapy isn't a
+        quick fix and works best when used alongside a good skincare routine
+      </p>
+    </div>
 
- <div class="howitworks">
-
-   <h2>How it works</h2>
-
-
-
-   <p>LED face masks use non-invasive light therapy to activate the skin’s natural healing processes, making them suitable for at-home use. They typically involve wearing the mask for 10-30 minutes, a few times a week, depending on the skin issue you're targeting.
-
-     While results can vary based on skin type and concerns, many users report seeing improvements in their skin texture, clarity, and tone with consistent use. However, it's important to note that LED light therapy isn't a quick fix and works best when used alongside a good skincare routine</p>
-
- </div>
-
-
- <div class="bottom">
-
-<p>will figure out what to put here</p>
- </div>
+    <div class="bottom">
+      <p>Call to action! It's time!</p>
+      <p>Sign up for our product by clicking </p>
+      
+    </div>
 
     <footer class="footer">Will figure out what to put here later</footer>
   </body>
