--- a/index.html
+++ b/index.html
@@ -112,10 +112,13 @@
 
     <div class="bottom">
       <p>Call to action! It's time!</p>
-      <p>Sign up for our product by clicking </p>
       
+      <p>Sign up for our product by clicking </p>
+      <button class="button">sign up</button>
+
+
     </div>
 
-    <footer class="footer">Will figure out what to put here later</footer>
+    <footer class="footer">The Odin Project</footer>
   </body>
 </html>
